docs: consolidate JAVA21.md and add missing patterns
Add patterns a principal engineer would expect:
- instanceof null-safety (returns false, no NPE)
- Math.clamp() (Java 21)
- Switch dominance rules (order matters)
- Stream.toList() unmodifiable gotcha
- Predicate.not() for clean negation
- Optional.or() for chained fallbacks
- Objects.checkIndex()/checkFromToIndex()
- Path.of() over Paths.get()
- InputStream.transferTo()/readAllBytes()
- Files.readString()/writeString()/mismatch()
- Virtual thread naming patterns
- Static members in inner classes (Java 16+)
- Records with interfaces
- Compact vs canonical constructor guidance
- Helpful NPE messages

Consolidate sections (660 → 565 lines):
- Merge Static Constants into examples
- Combine pattern matching sections
- Merge Anti-Patterns into single table
- Simplify Performance to bullet points
- Collapse Preview Features table
- Expand Quick Reference with all new patterns

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>